[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message-store"
description = "Message Store is an event sourcing implementation on top of NATS JetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Rui Figueiredo", email = "rui@zencastr.com" },
  { name = "Alex Cannan", email = "alex@zencastr.com" },
  { name = "Volodymyr Kyrylov", email = "volodymyr@zencastr.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Communications",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "nats-py[nkeys]",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zencastr/message-store#readme"
Issues = "https://github.com/zencastr/message-store"
Source = "https://github.com/zencastr/message-store"

[tool.hatch.version]
path = "message_store/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["message_store"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=message_store --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "message_store/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
